Fixed image alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,9 +23,10 @@ a {
 }
 
 .center {
-  top:-6%;
-  left:40%;
+  top:5%;
+  left:45%;
   position: absolute;
+  width: 25%;
 }
 
 
